testsuite/tests/properties/invalid_dflt_arg_val/bad_kwarg/test.lkt
from common import FooNode

class Example: FooNode {
    @exported fun p(a: Bool, b: Bool=true): Bool = a and b
    @exported fun calling(): Bool = node.p(a=1, b=true)
}
